# hfrm_vs_sora

./: Cargo.toml  README.md
data/: map.json  map_nk_old.json
plot_hfrm_vs_sora/: plot_routes.m
plot_hfrm_vs_sora/results/: res_nk.json
src/: air_risks.rs  bicriteria_dijkstra.rs  main.rs  risks.rs
src/air_risks/: air_risks.rs
src/bicriteria_dijkstra/: bicriteria_dijkstra.rs
src/risks/: risks.rs  tests.rs
